--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Guilherme Dias Simoes" />
+        <meta
+            name="description"
+            content="Portfolio website of Guilherme Dias Simoes"
+        />
+
+        <!-- CSS Remedy: https://github.com/jensimmons/cssremedy -->
+        <link rel="stylesheet" href="styles/remedy.css" />
+
+        <!-- Font Awesome -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+            integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
+            crossorigin="anonymous"
+        />
+
+        <!-- Favicon -->
+        <link
+            rel="icon"
+            type="image/svg+xml"
+            sizes="64x60"
+            href="images/favicon.svg"
+        />
+
         <title>Guilherme Dias Simoes | Software Developer</title>
+
+        <link rel="stylesheet" href="styles/style.css" />
     </head>
-    <body></body>
+    <body>
+        <header>
+            <div class="logo">
+                <img src="images/logo.svg" alt="" />
+            </div>
+        </header>
+    </body>
 </html>
