--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
             crossorigin="anonymous"
         />
 
-        <!-- Favicon -->
+        <!-- Favicons -->
         <link
             rel="icon"
-            type="image/svg+xml"
-            sizes="64x60"
-            href="images/favicon.svg"
+            type="image/png"
+            sizes="32x32"
+            href="/images/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/images/favicon-16x16.png"
         />
 
         <title>Guilherme Dias Simoes | Software Developer</title>
@@ -33,10 +39,48 @@
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
+        <img src="" alt="" />
         <header>
             <div class="logo">
                 <img src="images/logo.svg" alt="" />
             </div>
+            <button
+                class="nav-toggle"
+                aria-label="toggle navigation"
+                type="button"
+            >
+                <span class="hamburger"></span>
+            </button>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#home" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">What I do</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">About me</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">My Projects</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
+
+        <!-- Introduction -->
+        <section class="intro" id="home">
+            <h1 class="section__title section__title--intro">
+                Hi, I am <strong>Guilherme Dias Simoes</strong>
+            </h1>
+            <p class="section__subtitle section__subtitle--intro">
+                web developer
+            </p>
+            <img
+                src="images/profile-face.jpg"
+                alt="A picture of Guilherme Dias Simoes"
+            />
+        </section>
     </body>
 </html>
