Finish basic HTML

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="/images/favicon-32x32.png"
+            href="/images/favicon/favicon-32x32.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="/images/favicon-16x16.png"
+            href="/images/favicon/favicon-16x16.png"
         />
 
         <title>Guilherme Dias Simoes | Software Developer</title>
@@ -57,13 +57,13 @@
                         <a href="#home" class="nav__link">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">What I do</a>
+                        <a href="#skills" class="nav__link">Skills</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">About me</a>
+                        <a href="#about" class="nav__link">About</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">My Projects</a>
+                        <a href="#projects" class="nav__link">Projects</a>
                     </li>
                 </ul>
             </nav>
@@ -72,15 +72,181 @@
         <!-- Introduction -->
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
-                Hi, I am <strong>Guilherme Dias Simoes</strong>
+                Hi, I am <strong>Guilherme Simoes</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">
                 web developer
             </p>
             <img
-                src="images/profile-face.jpg"
+                src="images/profile/profile-face.jpg"
                 alt="A picture of Guilherme Dias Simoes"
             />
         </section>
+
+        <!-- Skills -->
+        <section class="skills" id="skills">
+            <h2 class="section__title section__title--services">Skills</h2>
+            <div class="icons-container">
+                <img src="images/skills-icons/html.svg" alt="HTML" />
+                <img src="images/skills-icons/css.svg" alt="CSS" />
+                <img
+                    src="images/skills-icons/javascript.svg"
+                    alt="JavaScript"
+                />
+                <img src="images/skills-icons/sass.svg" alt="Sass" />
+                <img src="images/skills-icons/react.svg" alt="React" />
+                <img src="images/skills-icons/nodejs.svg" alt="Node.js" />
+                <img src="images/skills-icons/express.svg" alt="Express" />
+                <img src="images/skills-icons/mongodb.svg" alt="mongoDB" />
+                <img src="images/skills-icons/git.svg" alt="Git" />
+                <img src="images/skills-icons/bem.svg" alt="Bem" />
+                <img src="images/skills-icons/python.svg" alt="Python" />
+                <img src="images/skills-icons/mysql.svg" alt="MySQL" />
+            </div>
+        </section>
+
+        <!-- About -->
+        <section class="about" id="about">
+            <h2 class="section__title section__title--about">About</h2>
+            <p class="section__subtitle section__subtitle--about"></p>
+
+            <div class="about-me__body">
+                <p></p>
+                <p></p>
+            </div>
+
+            <img
+                src="images/profile/profile-body.jpeg"
+                alt="Guilherme at the world's oldest bookstore"
+            />
+        </section>
+
+        <!-- My Work -->
+        <section class="projects" id="projects">
+            <h2 class="section__title">Projects</h2>
+            <p class="section__subtitle">Web developer based out of Toronto</p>
+
+            <div class="portfolio">
+                <!-- Portfolio item 01 -->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-01.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+
+                <!-- Portfolio item 02 -->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-02.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+
+                <!-- Portfolio item 03 -->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-03.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+
+                <!-- Portfolio item 04 -->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-04.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+
+                <!-- Portfolio item 05 -->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-05.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+
+                <!-- Portfolio item 06 -->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-06.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+
+                <!-- Portfolio item 07 -->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-07.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+
+                <!-- Portfolio item 08 -->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-08.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+
+                <!-- Portfolio item 09 -->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-09.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+
+                <!-- Portfolio item 0 0-->
+                <a href="#" class="portfolio__item">
+                    <img
+                        src="images/portfolio-10.jpg"
+                        alt=""
+                        class="portfolio__img"
+                    />
+                </a>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer>
+            <ul class="social-list">
+                <li class="social-list__item">
+                    <a
+                        class="social-list__link"
+                        href="mailto:portfolio.gds@gmail.com"
+                    >
+                        a
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a
+                        class="social-list__link"
+                        href="https://www.linkedin.com/in/gdsimoes/"
+                    >
+                        c
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a
+                        class="social-list__link"
+                        href="https://github.com/gdsimoes"
+                    >
+                        d
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
