Finish intro section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <!-- CSS Remedy: https://github.com/jensimmons/cssremedy -->
         <link rel="stylesheet" href="styles/remedy.css" />
 
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;900&family=Source+Sans+Pro:wght@300;900&display=swap"
+            rel="stylesheet"
+        />
+
         <!-- Font Awesome -->
         <link
             rel="stylesheet"
@@ -80,6 +88,7 @@
             <img
                 src="images/profile/profile-face.jpg"
                 alt="A picture of Guilherme Dias Simoes"
+                class="intro__img"
             />
         </section>
 
@@ -108,7 +117,9 @@
         <!-- About -->
         <section class="about" id="about">
             <h2 class="section__title section__title--about">About</h2>
-            <p class="section__subtitle section__subtitle--about"></p>
+            <p class="section__subtitle section__subtitle--about">
+                Web developer based out of Toronto
+            </p>
 
             <div class="about-me__body">
                 <p></p>
@@ -124,7 +135,7 @@
         <!-- My Work -->
         <section class="projects" id="projects">
             <h2 class="section__title">Projects</h2>
-            <p class="section__subtitle">Web developer based out of Toronto</p>
+            <p class="section__subtitle"></p>
 
             <div class="portfolio">
                 <!-- Portfolio item 01 -->
