Finish skills section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 Hi, I am <strong>Guilherme Simoes</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">
-                web developer
+                Software Developer
             </p>
             <img
                 src="images/profile/profile-face.jpg"
@@ -94,23 +94,47 @@
 
         <!-- Skills -->
         <section class="skills" id="skills">
-            <h2 class="section__title section__title--services">Skills</h2>
+            <h2 class="section__title section__title--skills">Skills</h2>
             <div class="icons-container">
-                <img src="images/skills-icons/html.svg" alt="HTML" />
-                <img src="images/skills-icons/css.svg" alt="CSS" />
-                <img
-                    src="images/skills-icons/javascript.svg"
-                    alt="JavaScript"
-                />
-                <img src="images/skills-icons/sass.svg" alt="Sass" />
-                <img src="images/skills-icons/react.svg" alt="React" />
-                <img src="images/skills-icons/nodejs.svg" alt="Node.js" />
-                <img src="images/skills-icons/express.svg" alt="Express" />
-                <img src="images/skills-icons/mongodb.svg" alt="mongoDB" />
-                <img src="images/skills-icons/git.svg" alt="Git" />
-                <img src="images/skills-icons/bem.svg" alt="Bem" />
-                <img src="images/skills-icons/python.svg" alt="Python" />
-                <img src="images/skills-icons/mysql.svg" alt="MySQL" />
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/html.svg" alt="HTML" />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/css.svg" alt="CSS" />
+                </div>
+                <div class="icons-container__icon">
+                    <img
+                        src="images/skills-icons/javascript.svg"
+                        alt="JavaScript"
+                    />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/sass.svg" alt="Sass" />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/react.svg" alt="React" />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/nodejs.svg" alt="Node.js" />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/express.svg" alt="Express" />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/mongodb.svg" alt="mongoDB" />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/git.svg" alt="Git" />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/vitejs.svg" alt="Vite" />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/python.svg" alt="Python" />
+                </div>
+                <div class="icons-container__icon">
+                    <img src="images/skills-icons/mysql.svg" alt="MySQL" />
+                </div>
             </div>
         </section>
 
@@ -121,9 +145,9 @@
                 Web developer based out of Toronto
             </p>
 
-            <div class="about-me__body">
+            <div class="about__body">
                 <p></p>
-                <p></p>
+                <p><a href="#" class="btn">My Resume</a></p>
             </div>
 
             <img
