Finish about section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <!-- Skills -->
         <section class="skills" id="skills">
-            <h2 class="section__title section__title--skills">Skills</h2>
+            <h2 class="section__title section__title--skills">My Skills</h2>
             <div class="icons-container">
                 <div class="icons-container__icon">
                     <img src="images/skills-icons/html.svg" alt="HTML" />
@@ -140,19 +140,28 @@
 
         <!-- About -->
         <section class="about" id="about">
-            <h2 class="section__title section__title--about">About</h2>
+            <h2 class="section__title section__title--about">About Me</h2>
             <p class="section__subtitle section__subtitle--about">
                 Web developer based out of Toronto
             </p>
 
             <div class="about__body">
-                <p></p>
-                <p><a href="#" class="btn">My Resume</a></p>
+                <p>
+                    My name is Guilherme (but everybody knows me as Gui). I am
+                    an avid web developer who enjoys taking on new challenges
+                    and always looks for ways to improve. I started my lifelong
+                    interest in coding and problem-solving in my teenage years,
+                    and after a few years of teaching, I decided to become a
+                    professional developer. This journey has been immensely
+                    fulfilling, and I'm still planning on learning more!
+                </p>
+                <a href="resume_portfolio.pdf" class="btn">My Resume</a>
             </div>
 
             <img
                 src="images/profile/profile-body.jpeg"
                 alt="Guilherme at the world's oldest bookstore"
+                class="about__img"
             />
         </section>
 
