--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
             href="/images/favicon/favicon-16x16.png"
         />
 
-        <title>Guilherme Dias Simoes | Software Developer</title>
+        <title>Guilherme Dias Simoes | Web Developer</title>
 
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
-        <img src="" alt="" />
         <header>
             <div class="logo">
                 <img src="images/logo.svg" alt="" />
@@ -83,7 +82,7 @@
                 Hi, I am <strong>Guilherme Simoes</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">
-                Software Developer
+                Web Developer
             </p>
             <img
                 src="images/profile/profile-face.jpg"
@@ -155,7 +154,9 @@
                     professional developer. This journey has been immensely
                     fulfilling, and I'm still planning on learning more!
                 </p>
-                <a href="resume_portfolio.pdf" class="btn">My Resume</a>
+                <a href="resume_portfolio.pdf" class="btn about__btn">
+                    My Resume
+                </a>
             </div>
 
             <img
