--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <title>Guilherme Dias Simoes | Web Developer</title>
 
         <link rel="stylesheet" href="styles/style.css" />
+        <script src="scripts/main.js" type="module"></script>
     </head>
     <body>
         <header>
