Finish Projects section

--- a/index.html
+++ b/index.html
@@ -175,91 +175,73 @@
 
             <div class="portfolio">
                 <!-- Portfolio item 01 -->
-                <a href="#" class="portfolio__item">
+                <a
+                    href="https://github.com/gdsimoes/portfolio-website"
+                    class="portfolio__item"
+                >
                     <img
-                        src="images/portfolio-01.jpg"
-                        alt=""
+                        src="images/projects/project-portfolio.png"
+                        alt="This website"
                         class="portfolio__img"
                     />
                 </a>
 
                 <!-- Portfolio item 02 -->
-                <a href="#" class="portfolio__item">
+                <a
+                    href="https://github.com/gdsimoes/movie-watchlist"
+                    class="portfolio__item"
+                >
                     <img
-                        src="images/portfolio-02.jpg"
-                        alt=""
+                        src="images/projects/project-movie-watchlist.png"
+                        alt="Movie Watchlist"
                         class="portfolio__img"
                     />
                 </a>
 
                 <!-- Portfolio item 03 -->
-                <a href="#" class="portfolio__item">
+                <a
+                    href="https://github.com/gdsimoes/color-scheme-generator"
+                    class="portfolio__item"
+                >
                     <img
-                        src="images/portfolio-03.jpg"
-                        alt=""
+                        src="images/projects/project-color-scheme-generator.png"
+                        alt="Color Scheme Generator"
                         class="portfolio__img"
                     />
                 </a>
 
                 <!-- Portfolio item 04 -->
-                <a href="#" class="portfolio__item">
+                <a
+                    href="https://github.com/gdsimoes/scrimba-password"
+                    class="portfolio__item"
+                >
                     <img
-                        src="images/portfolio-04.jpg"
-                        alt=""
+                        src="images/projects/project-password.png"
+                        alt="Password Generator"
                         class="portfolio__img"
                     />
                 </a>
 
                 <!-- Portfolio item 05 -->
-                <a href="#" class="portfolio__item">
+                <a
+                    href="https://github.com/gdsimoes/scrimba-unit-converter"
+                    class="portfolio__item"
+                >
                     <img
-                        src="images/portfolio-05.jpg"
-                        alt=""
+                        src="images/projects/project-unit-converter.png"
+                        alt="Unit Converter"
                         class="portfolio__img"
                     />
                 </a>
 
                 <!-- Portfolio item 06 -->
-                <a href="#" class="portfolio__item">
+                <a
+                    href="https://github.com/gdsimoes/expenses-chart-component"
+                    class="portfolio__item"
+                >
                     <img
-                        src="images/portfolio-06.jpg"
-                        alt=""
-                        class="portfolio__img"
-                    />
-                </a>
-
-                <!-- Portfolio item 07 -->
-                <a href="#" class="portfolio__item">
-                    <img
-                        src="images/portfolio-07.jpg"
-                        alt=""
-                        class="portfolio__img"
-                    />
-                </a>
-
-                <!-- Portfolio item 08 -->
-                <a href="#" class="portfolio__item">
-                    <img
-                        src="images/portfolio-08.jpg"
-                        alt=""
-                        class="portfolio__img"
-                    />
-                </a>
-
-                <!-- Portfolio item 09 -->
-                <a href="#" class="portfolio__item">
-                    <img
-                        src="images/portfolio-09.jpg"
-                        alt=""
-                        class="portfolio__img"
-                    />
-                </a>
-
-                <!-- Portfolio item 0 0-->
-                <a href="#" class="portfolio__item">
-                    <img
-                        src="images/portfolio-10.jpg"
-                        alt=""
+                        src="images/projects/project-expenses-chart-component.png"
+                        alt="Expenses Chart Component"
                         class="portfolio__img"
                     />
                 </a>
